# rota_webui

./: .gitignore  Dockerfile  README.md  docker-compose.yml  legacy_sidebar.py  mypy.ini  personnel_template_v2.csv  pyproject.toml  requirements.txt  rota.xlsx  team_dummy.csv  test_export.xlsx  test_output.xlsx  verification_output.txt  verification_output_v2.txt
app/: cli.py  streamlit_app.py
data/: sample_people.csv  studies.db
docs/: Zero Trust Codebase Audit Report Rota Optimizer.md  contraintes_actuelles.md  feature_gap_analysis.md  features.md  ideas.md  legacy_specification.md  old-template-planning.xlsx
results/: planning_complet (1).xlsx  planning_complet (2).xlsx  run_20251207_112728.json  run_20251207_184016.json  run_20251207_190454.json  run_20251207_191017.json  run_20251207_193531.json  run_20251207_194905.json  run_20251207_200032.json  run_20251208_102319.json  run_20251208_110149.json  run_20251208_111457.json  run_20251208_111841.json  run_20251208_115214.json  run_20251208_141324.json  run_20251208_141445.json  run_20251208_141450.json  run_20251208_143226.json  run_20251208_144915.json  run_20251208_145326.json  run_20251208_145352.json  run_20251208_150347.json  run_20251208_161416.json  run_20251208_161733.json  run_20251208_164306.json  run_20251208_164747.json  run_20251210_092742.json  run_20251210_094528.json  run_20251210_115358.json  run_20251210_115511.json  run_20251210_115723.json  run_20251210_135626.json  run_20251210_135756.json  run_20251211_105404.json  run_20251211_105902.json  run_20251211_110625.json  run_20251211_114438.json  (+45 more)
(+92 files in other folders)
